--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "wiredep": "^2.0.0"
   },
   "dependencies": {
-    "gulp-gh-pages": "^0.5.2"
+    "gulp-gh-pages": "^0.5.2",
+    "gulp-mocha": "^2.1.2"
   }
 }
