Added npm test to run mocha

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "dependencies": {
     "gulp-gh-pages": "^0.5.2",
     "gulp-mocha": "^2.1.2"
+  },
+  "scripts": {
+    "test": "gulp test"
   }
 }
