--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "moment": "~2.10.3"
   }
 }
