--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
     "modernizr": "~2.8.1",
-    "moment": "~2.10.3"
+    "moment": "~2.10.3",
+    "nprogress": "~0.2.0"
   }
 }
