--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "bootstrap-sass-official": "~3.3.1",
     "modernizr": "~2.8.1",
     "moment": "~2.10.3",
-    "nprogress": "~0.2.0"
+    "nprogress": "~0.2.0",
+    "arc.js": "~0.1.0"
   }
 }
