--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
   },
   "dependencies": {
     "gulp-gh-pages": "^0.5.2",
-    "gulp-mocha": "^2.1.2"
+    "gulp-mocha": "^2.1.2",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.37",
+    "karma-beep-reporter": "^0.1.4",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "phantomjs": "^1.9.17"
   },
   "scripts": {
     "test": "gulp test"
